--- a/songs.html
+++ b/songs.html
@@ -170,11 +170,12 @@
 
 
 /* image to responsive */
-.image {
+.img {
   display: block;
   width: 100%;
   height: auto;
   align:center;
+  postion: absolute;
 }
 
 /* The overlay */
