--- a/songs.html
+++ b/songs.html
@@ -172,10 +172,9 @@
 /* image to responsive */
 .img {
   display: block;
-  width: 100%;
-  height: auto;
+  width: 50%;
+  height: 50%;
   align:center;
-  postion: absolute;
 }
 
 /* The overlay */
