--- a/team.html
+++ b/team.html
@@ -163,6 +163,18 @@
 	<br />
 	<br />
 	A group of freshmen hopeful for a career in technology.
+	
+	<br />
+	<br />
+	"Hazel" is a seventeen year old pop star that was raised in Texas. We based Hazel off artists like Ariana Grande and Beyonce.
+	<br />
+	We wanted to make an artist that was close to our ages and liked artists that make music to inspire others. 
+	<br />
+	We wanted to convey this feeling through our website.
+	<br />
+	We hoped you enjoyed our site!
+	<br />
+	<br />
 		</p>
 	</section>
   
