--- a/events.html
+++ b/events.html
@@ -390,7 +390,17 @@ function showSlides() {
   
   
 		</div>
-
+		
+		<div class="box-8>
+			<p>Tickets go on sale in
+		<br />
+		
+		</p>
+		
+    <a href="shop.html" style="font-weight:bold;">10 HOURS LEFT</a>
+		</div>
+						 
+						 
 	</section>
 
   
