--- a/songs.html
+++ b/songs.html
@@ -171,11 +171,11 @@
 
 /* image to responsive */
 .img {
-  display: block;
   width: 100%;
   height: 25px;
   align:center;
   position:center;
+  max-width: 300px;
 }
 
 /* The overlay */
