--- a/events.html
+++ b/events.html
@@ -391,13 +391,13 @@ function showSlides() {
   
 		</div>
 		
-		<div class="box-8>
+		<div class="box-8">
 			<p>Tickets go on sale in
 		<br />
 		
 		</p>
 		
-    <a href="shop.html" style="font-weight:bold;">10 HOURS LEFT</a>
+    <a href="#" style="font-weight:bold;">10 HOURS LEFT</a>
 		</div>
 						 
 						 
