--- a/songs.html
+++ b/songs.html
@@ -172,7 +172,7 @@
 /* image to responsive */
 .img {
   width: 100%;
-  height: 25px;
+  height: auto;
   align:center;
   position:center;
   max-width: 300px;
