--- a/songs.html
+++ b/songs.html
@@ -226,7 +226,7 @@
 <body>
   
 <div class="song1">
-  <img src="thumpnail.PNG" alt="song cover" class="image" style="align:center;">
+  <img src="thumpnail.PNG" alt="song cover" class="img" style="align:center;">
   <div class="overlay">Make Me Move</div>
   <audio controls>
     <source src="Culture Code - Make Me Move (feat. Karra) [NCS Release].mp3" type="audio/mpeg">
@@ -282,7 +282,7 @@ Can make meee.
   
   
 <div class="song2">
-  <img src="thumb2.PNG" alt="song cover" class="image" style="align:center;">
+  <img src="thumb2.PNG" alt="song cover" class="img" style="align:center;">
   <div class="overlay">Let Go</div>
   <audio controls>
     <source src="Lundh - Let Go (feat. Safia).mp3" type="audio/mpeg">
@@ -335,7 +335,7 @@ Oh I've got to let go
     
     
 <div class="song3">
-  <img src="ScitechWebmaster.github.io/cover 3.jpg" alt="song cover" class="image" style="align:center;">
+  <img src="ScitechWebmaster.github.io/cover 3.jpg" alt="song cover" class="img" style="align:center;">
   <div class="overlay">Feint</div>
   <audio controls>
     <source src="Feint ft Veela – Vagrant [Without Copyright].mp3" type="audio/mpeg">
