--- a/help.html
+++ b/help.html
@@ -175,16 +175,17 @@
 <div class="responseform">
   
     <h2>Contact Info or Quick Response</h2>
-  <form action="/response.html" method="get">
-  First Name: <input type="text" name="fname"><br>
+  <form action="/response.html" method="GET">
+  First Name: <input type="text" name="$txt"><br>
    </form>
-   <form action="/response.html" method="get">
+
+   <form action="/response.html" method="GET">
   Last Name: <input type="text" name="lname"><br>
    </form>
-  <form action="/response.html" method="get">
+  <form action="/response.html" method="GET">
   Any comments or concerns?: <input type="text" name="cc"><br>
    </form>
-   <form action="/response.html" method="get">
+   <form action="/response.html" method="GET">
   Contact Info.: <input type="text" name="ci"><br>
    </form>
  <p>Contact (956) 451-2068 (956) 266-8376 associate numbers or via email Hazelcorp.1@gmail.com
