--- a/help.html
+++ b/help.html
@@ -175,8 +175,14 @@
 <div class="responseform">
   
     <h2>Contact Info or Quick Response</h2>
+  <?php
+$txt = 
+?>
+
   <form action="/response.html" method="GET">
-  First Name: <input type="text" name="$txt"><br>
+    <?php
+  $txt = First Name: <input type="text" >
+?><br>
    </form>
 
    <form action="/response.html" method="GET">
