--- a/response.html
+++ b/response.html
@@ -5,10 +5,14 @@
 
 <h1 style="align-text:center;">Response Page</h1>
 <p style="align-text:center;">Thank you for your response</p> 
+
 <?php
-echo $_GET["fname"]; 
-?> 
+echo " . $txt . ";
+?>
+
+
   <?php
+
 echo $_GET["lname"]; 
 ?> 
 <p style="align-text:center;">We will get right back to you once a provider is available.</p>
