--- a/help.html
+++ b/help.html
@@ -181,7 +181,7 @@ $txt =
 
   <form action="/response.html" method="GET">
     <?php
-  $txt = First Name: <input type="text" >
+    First Name: $txt = <input type="text " >
 ?><br>
    </form>
 
