--- a/response.html
+++ b/response.html
@@ -4,10 +4,10 @@
 <body>
 
 <h1 style="align-text:center;">Response Page</h1>
-<p style="align-text:center;">Thank you for your response</p> 
+ 
 
 <?php
-echo " . $txt . ";
+echo <p style="align-text:center;">Thank you for your response:" . $txt . ";</p>
 ?>
 
 
