--- a/help.html
+++ b/help.html
@@ -181,8 +181,7 @@ $txt =
 
   <form action="/response.html" method="GET">
     <?php
-    First Name: $txt = <input type="text " >
-?><br>
+    $txt = First Name: <input type="text " >; ?><br>
    </form>
 
    <form action="/response.html" method="GET">
