--- a/response.html
+++ b/response.html
@@ -7,7 +7,7 @@
  
 
 <?php
-echo <p style="align-text:center;">Thank you for your response:" . $txt . ";</p>
+echo "Thank you for your response: . $txt . "!";
 ?>
 
 
