--- a/help.html
+++ b/help.html
@@ -175,23 +175,18 @@
 <div class="responseform">
   
     <h2>Contact Info or Quick Response</h2>
-  <?php
-$txt = 
-?>
 
-  <form action="/response.html" method="GET">
-    <?php
-    $txt = First Name: <input type="text " >; ?><br>
+  <form action="/response.html" method="post">
+    First Name: <input type="text" name"$txt1>; ?><br>
+      </form>
+   <form action="/response.html" method="post">
+  Last Name: <input type="text" name="$txt2"><br>
    </form>
-
-   <form action="/response.html" method="GET">
-  Last Name: <input type="text" name="lname"><br>
+  <form action="/response.html" method="post">
+  Any comments or concerns?: <input type="text" name="$txt3"><br>
    </form>
-  <form action="/response.html" method="GET">
-  Any comments or concerns?: <input type="text" name="cc"><br>
-   </form>
-   <form action="/response.html" method="GET">
-  Contact Info.: <input type="text" name="ci"><br>
+   <form action="/response.html" method="post">
+  Contact Info.: <input type="text" name="$txt4"><br>
    </form>
  <p>Contact (956) 451-2068 (956) 266-8376 associate numbers or via email Hazelcorp.1@gmail.com
  <br />
