--- a/help.html
+++ b/help.html
@@ -177,7 +177,7 @@
     <h2>Contact Info or Quick Response</h2>
 
   <form action="/response.html" method="post">
-    First Name: <input type="text" name"$txt1><br>
+    First Name: <input type="text" name"$txt1"><br>
       </form>
    <form action="/response.html" method="post">
   Last Name: <input type="text" name="$txt2"><br>
