--- a/help.html
+++ b/help.html
@@ -176,6 +176,10 @@
   
     <h2>Contact Info or Quick Response</h2>
   
+  <style>
+.error {color: #FF0000;}
+</style>
+  
   <?php
 // define variables and set to empty values
 $nameErr = $emailErr  = $websiteErr = "";
@@ -226,17 +230,17 @@ function test_input($data) {
   return $data;
 }
 ?>
-  
-   <form action="/response.html" method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
+   <p><span class="error">* required field</span></p>
+   <form action="/response.html" method="post">
   Name: <input type="text" name="name" value="<?php echo $name;?>">
 </form>
-     <form action="/response.html" method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
+     <form action="/response.html" method="post">
 E-mail: <input type="text" name="email" value="<?php echo $email;?>">
 </form>
-       <form action="/response.html" method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
+       <form action="/response.html" method="post">
 Website: <input type="text" name="website" value="<?php echo $website;?>">
 </form>
-         <form action="/response.html" method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
+         <form action="/response.html" method="post">
 Comment: <textarea name="comment" rows="5" cols="40"><?php echo $comment;?></textarea>
 </form>
  
