--- a/response.html
+++ b/response.html
@@ -14,11 +14,11 @@ echo "<br>";
 ?>
  <p style="align-text:center;">CONTACT INFO WILL BE CONFIDENTIAL</p>
  <?php
-echo $email;
-echo "<br>";
+print $email;
+print "<br>";
 
-echo $comment;
-echo"<br>";
+print $comment;
+print "<br>";
 ?>
  <p style="align-text:center;">Thanks for the comment or consern we'll get back to you momentarily.</p>
   
