--- a/help.html
+++ b/help.html
@@ -231,16 +231,16 @@ function test_input($data) {
 }
 ?>
    <p><span class="error">* required field</span></p>
-   <form action="/response.html" method="post">
+   <form action="response.html" method="post">
   Name: <input type="text" name="name" value="<?php echo $name;?>">
 </form>
-     <form action="/response.html" method="post">
+     <form action="response.html" method="post">
 E-mail: <input type="text" name="email" value="<?php echo $email;?>">
 </form>
-       <form action="/response.html" method="post">
+       <form action="response.html" method="post">
 Website: <input type="text" name="website" value="<?php echo $website;?>">
 </form>
-         <form action="/response.html" method="post">
+         <form action="response.html" method="post">
 Comment: <textarea name="comment" rows="5" cols="40"><?php echo $comment;?></textarea>
 </form>
  
