--- a/help.html
+++ b/help.html
@@ -172,78 +172,22 @@
   </div>
 </div> 
 
-<div class="responseform">
-  
-    <h2>Contact Info or Quick Response</h2>
-  
-  <style>
-.error {color: #FF0000;}
-</style>
-  
-  <?php
-// define variables and set to empty values
-$nameErr = $emailErr  = $websiteErr = "";
-$name = $email = $comment = $website = "";
+<div class="responseform">	<div class="responseform">
 
-if ($_SERVER["REQUEST_METHOD"] == "POST") {
-  if (empty($_POST["name"])) {
-    $nameErr = "Name is required";
-  } else {
-    $name = test_input($_POST["name"]);
-    // check if name only contains letters and whitespace
-    if (!preg_match("/^[a-zA-Z ]*$/",$name)) {
-      $nameErr = "Only letters and white space allowed"; 
-    }
-  }
-  
-  if (empty($_POST["email"])) {
-    $emailErr = "Email is required";
-  } else {
-    $email = test_input($_POST["email"]);
-    // check if e-mail address is well-formed
-    if (!filter_var($email, FILTER_VALIDATE_EMAIL)) {
-      $emailErr = "Invalid email format"; 
-    }
-  }
-    
-  if (empty($_POST["website"])) {
-    $website = "";
-  } else {
-    $website = test_input($_POST["website"]);
-    // check if URL address syntax is valid (this regular expression also allows dashes in the URL)
-    if (!preg_match("/\b(?:(?:https?|ftp):\/\/|www\.)[-a-z0-9+&@#\/%?=~_|!:,.;]*[-a-z0-9+&@#\/%=~_|]/i",$website)) {
-      $websiteErr = "Invalid URL"; 
-    }
-  }
 
-  if (empty($_POST["comment"])) {
-    $comment = "";
-  } else {
-    $comment = test_input($_POST["comment"]);
-  }
-}
-
-function test_input($data) {
-  $data = trim($data);
-  $data = stripslashes($data);
-  $data = htmlspecialchars($data);
-  return $data;
-}
-?>
-   <p><span class="error">* required field</span></p>
-   <form action="response.html" method="post">
-  Name: <input type="text" name="name" value="<?php echo $name;?>">
-</form>
-     <form action="response.html" method="post">
-E-mail: <input type="text" name="email" value="<?php echo $email;?>">
-</form>
-       <form action="response.html" method="post">
-Website: <input type="text" name="website" value="<?php echo $website;?>">
-</form>
-         <form action="response.html" method="post">
-Comment: <textarea name="comment" rows="5" cols="40"><?php echo $comment;?></textarea>
-</form>
- 
+     <h2>Contact Info or Quick Response</h2>	  
+  <form action="/response.html" method="get">	  
+  First Name: <input type="text" name="$fname"><br>
+   </form>	
+  <form action="/response.html" method="get">	
+    Last Name: <input type="text" name="$lname"><br>
+   </form>	   </form>
+  <form action="/response.html" method="get">	 
+  Any comments or concerns?: <input type="text" name="$comment"><br>	
+   </form>	  
+   <form action="/response.html" method="get">	
+  Contact Info.: <input type="text" name="$contact"><br>	
+   </form>	   </form>
  <p>Contact (956) 451-2068 (956) 266-8376 associate numbers or via email Hazelcorp.1@gmail.com
  <br />
  <br />
