--- a/response.html
+++ b/response.html
@@ -9,16 +9,16 @@
 <p>Thank you for your response:</p>
  <p style="align-text:center;">We will get right back to you once a provider is available.</p>
 <?php
-echo $name;
+echo = $name;
 echo "<br>";
 ?>
  <p style="align-text:center;">CONTACT INFO WILL BE CONFIDENTIAL</p>
  <?php
-print $email;
-print "<br>";
+echo = $email;
+echo "<br>";
 
-print $comment;
-print "<br>";
+echo = $comment;
+echo "<br>";
 ?>
  <p style="align-text:center;">Thanks for the comment or consern we'll get back to you momentarily.</p>
   
