--- a/response.html
+++ b/response.html
@@ -9,15 +9,15 @@
 <p>Thank you for your response:</p>
  <p style="align-text:center;">We will get right back to you once a provider is available.</p>
 <?php
-echo = $name;
+echo "$name";
 echo "<br>";
 ?>
  <p style="align-text:center;">CONTACT INFO WILL BE CONFIDENTIAL</p>
  <?php
-echo = $email;
+echo "$email";
 echo "<br>";
 
-echo = $comment;
+echo "$comment";
 echo "<br>";
 ?>
  <p style="align-text:center;">Thanks for the comment or consern we'll get back to you momentarily.</p>
