--- a/response.html
+++ b/response.html
@@ -6,21 +6,18 @@
 <h1 style="align-text:center;">Response Page</h1>
  
 
-<p>Thank you for your response:</p>
- <p style="align-text:center;">We will get right back to you once a provider is available.</p>
-<?php
-echo "$name";
-echo "<br>";
-?>
- <p style="align-text:center;">CONTACT INFO WILL BE CONFIDENTIAL</p>
- <?php
-echo "$email";
-echo "<br>";
-
-echo "$comment";
-echo "<br>";
-?>
- <p style="align-text:center;">Thanks for the comment or consern we'll get back to you momentarily.</p>
+ <p><b>
+  Thank you for your response!
+  </b></p>
+ <p
+    style="align-text:center;">We will get right back to you once a provider is available.
+ </p>
+ <p
+    style="align-text:center;">CONTACT INFO WILL BE CONFIDENTIAL
+ </p>
+ <p
+    style="align-text:center;">Thanks for the comment or consern we'll get back to you momentarily.
+ </p>
   
  
  
